# female-doctorates

./: README.md  _100_load_hochschulschriften.py  _102_extract_student_characteristics.py  _210_estimate_novelty.py  _290_prepare_cohort_master.py  _290_prepare_individual_master.py  config.toml  pyproject.toml
input/: README.md  abbreviations.csv
input/university_data/: README.md  admissions.csv  geocoordinates.csv
intermed/: 102_characteristics.csv  210_novelty.csv
intermed/290_dissertations_master/: cohort.csv  individual.csv
output/maintenance/: 210_novel_phrases.csv
output/statistics/: N_dissertations.txt  doctor_N_obs.txt  novel_N_novel.txt  novel_N_terms.txt
