[project]
name = "Female Doctorates"
description = "First female doctorates at German universities"
author = "Your name here"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = "=3.13"
classifiers = [
	"Development Status :: 3 - Alpha",
	"License :: OSI Approved :: MIT License",
	"Intended Audience :: Science/Research",
	"Natural Language :: English",
	"Programming Language :: Python :: 3.13"
]
dependencies = [
	"pandas",
	"python-dotenv",
	"tqdm"
]
